@@ -1,104 +1,104 @@
 [versions]
 ClientForm = 0.2.7
+Pygments = 0.8.1
+RestrictedPython = 3.4.2
+ZConfig = 2.5.1
+ZODB3 = 3.8
 docutils = 0.4
 martian = 0.9.3
 mechanize = 0.1.7b
-Pygments = 0.8.1
-pytz = 2007g
-RestrictedPython = 3.4.2
+pytz = 2007k
 simplejson = 1.7.1
 z3c.autoinclude = 0.2.2
 z3c.flashmessage = 1.0b2
 z3c.testsetup = 0.2.1
-zc.catalog = 1.2b
-ZConfig = 2.5
-zdaemon = 2.0.0
-ZODB3 = 3.8.0b2
-zodbcode = 3.4.0b1dev-r75670
-zope.annotation = 3.4.0
-zope.app.apidoc = 3.4.0
+zc.catalog = 1.2
+zdaemon = 2.0.1
+zodbcode = 3.4
+zope.annotation = 3.4
+zope.app.apidoc = 3.4.3
 zope.app.applicationcontrol = 3.4.1
 zope.app.appsetup = 3.4.1
-zope.app.authentication = 3.4.0a1
-zope.app.basicskin = 3.4.0a1
-zope.app.broken = 3.4.0a1
-zope.app.catalog = 3.4.0a2
-zope.app.component = 3.4.0b3
-zope.app.container = 3.5.0a1
-zope.app.content = 3.4.0a1
-zope.app.debug = 3.4.0a1
-zope.app.dependable = 3.4.0a1
+zope.app.authentication = 3.4.1
+zope.app.basicskin = 3.4
+zope.app.broken = 3.4
+zope.app.catalog = 3.5.1
+zope.app.component = 3.4.1
+zope.app.container = 3.5.3
+zope.app.content = 3.4
+zope.app.debug = 3.4
+zope.app.dependable = 3.4
 zope.app.error = 3.5.1
-zope.app.exception = 3.4.0a1
-zope.app.file = 3.4.0a1
-zope.app.folder = 3.4.0a1
-zope.app.form = 3.4.0b2
-zope.app.generations = 3.4.0a1
-zope.app.http = 3.4.0a1
-zope.app.i18n = 3.4.0a1
-zope.app.interface = 3.4.0a1
-zope.app.intid = 3.4.0a2
-zope.app.keyreference = 3.4.0a1
-zope.app.locales = 3.4.0a1
-zope.app.onlinehelp = 3.4.0a1
-zope.app.pagetemplate = 3.4.0
-zope.app.preference = 3.4.0a1
-zope.app.principalannotation = 3.4.0a1
-zope.app.publication = 3.4.2
-zope.app.publisher = 3.5.0a2
-zope.app.renderer = 3.4.0a1
-zope.app.rotterdam = 3.4.0a1
-zope.app.schema = 3.4.0a1
-zope.app.security = 3.4.0a1-1
-zope.app.server = 3.4.0a1-4
-zope.app.session = 3.4.0a1
-zope.app.skins = 3.4.0a1
-zope.app.testing = 3.4.0a1
-zope.app.tree = 3.4.0a1
-zope.app.twisted = 3.4.0a1
-zope.app.wsgi = 3.4.0
-zope.app.zapi = 3.4.0a1
-zope.app.zcmlfiles = 3.4.0a1
-zope.app.zopeappgenerations = 3.4.0a1
-zope.cachedescriptors = 3.4.0
-zope.component = 3.4.0
-zope.configuration = 3.4.0
-zope.contentprovider = 3.4.0
-zope.contenttype = 3.4.0
-zope.copypastemove = 3.4.0
-zope.datetime = 3.4.0
-zope.deferredimport = 3.4.0
-zope.deprecation = 3.4.0
+zope.app.exception = 3.4.1
+zope.app.file = 3.4.2
+zope.app.folder = 3.4
+zope.app.form = 3.4.1
+zope.app.generations = 3.4.1
+zope.app.http = 3.4.1
+zope.app.i18n = 3.4.4
+zope.app.interface = 3.4
+zope.app.intid = 3.4.1
+zope.app.keyreference = 3.4.1
+zope.app.locales = 3.4.1
+zope.app.onlinehelp = 3.4.1
+zope.app.pagetemplate = 3.4
+zope.app.preference = 3.4.1
+zope.app.principalannotation = 3.4
+zope.app.publication = 3.4.3
+zope.app.publisher = 3.5a2
+zope.app.renderer = 3.4
+zope.app.rotterdam = 3.4.1
+zope.app.schema = 3.4
+zope.app.security = 3.4
+zope.app.server = 3.4
+zope.app.session = 3.5.1
+zope.app.skins = 3.4
+zope.app.testing = 3.4.1
+zope.app.tree = 3.4
+zope.app.twisted = 3.4
+zope.app.wsgi = 3.4
+zope.app.zapi = 3.4
+zope.app.zcmlfiles = 3.4.3
+zope.app.zopeappgenerations = 3.4
+zope.cachedescriptors = 3.4
+zope.component = 3.4
+zope.configuration = 3.4
+zope.contentprovider = 3.4
+zope.contenttype = 3.4
+zope.copypastemove = 3.4
+zope.datetime = 3.4
+zope.deferredimport = 3.4
+zope.deprecation = 3.4
 zope.dottedname = 3.4.2
-zope.dublincore = 3.4.0
+zope.dublincore = 3.4
 zope.error = 3.5.1
-zope.event = 3.4.0
-zope.exceptions = 3.4.0
-zope.filerepresentation = 3.4.0
-zope.formlib = 3.4.0
-zope.hookable = 3.4.0
-zope.i18n = 3.4.0
+zope.event = 3.4
+zope.exceptions = 3.4
+zope.filerepresentation = 3.4
+zope.formlib = 3.4
+zope.hookable = 3.4
+zope.i18n = 3.4
 zope.i18nmessageid = 3.4.3
 zope.index = 3.4.1
-zope.interface = 3.4.0
-zope.lifecycleevent = 3.4.0
-zope.location = 3.4.0b2
-zope.minmax = 1.0
-zope.modulealias = 3.4.0a1
-zope.pagetemplate = 3.4.0a1
-zope.proxy = 3.4.0
+zope.interface = 3.4.1
+zope.lifecycleevent = 3.4
+zope.location = 3.4
+zope.minmax = 1.1
+zope.modulealias = 3.4
+zope.pagetemplate = 3.4
+zope.proxy = 3.4
 zope.publisher = 3.5.0a1.dev-r78838
-zope.schema = 3.4.0
-zope.security = 3.4.0b5
-zope.securitypolicy = 3.4.0
-zope.server = 3.5.0a2
+zope.schema = 3.4
+zope.security = 3.4
+zope.securitypolicy = 3.4
+zope.server = 3.5a2
 zope.session = 3.4.1
-zope.size = 3.4.0
-zope.structuredtext = 3.4.0
-zope.tal = 3.4.0b1
-zope.tales = 3.4.0a1
-zope.testbrowser = 3.4.1
+zope.size = 3.4
+zope.structuredtext = 3.4
+zope.tal = 3.4.1
+zope.tales = 3.4
+zope.testbrowser = 3.4.2
 zope.testing = 3.5.1
 zope.thread = 3.4
 zope.traversing = 3.5.0a1.dev-r78730
-zope.viewlet = 3.4.1
+zope.viewlet = 3.4.2
